[project]
name = "async-subagent-server-example"
version = "0.1.0"
description = "Self-hosted async subagent server example using deepagents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "langchain-openai>=0.4.13",
    "langgraph>=1.2.8",
    "langgraph-sdk>=0.4.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]




[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
